# mscomplex-3d

./: CMakeLists.txt  config.h.in  main.cpp
dmsc/: bitonic_sort.cpp  grid.cpp  grid.h  grid_datamanager.cpp  grid_datamanager.h  grid_dataset.cpp  grid_dataset.h  grid_dataset_ensure.h  grid_mscomplex.cpp  grid_mscomplex.h  grid_mscomplex_ensure.h  main.cpp  rectangle_complex.h
dmsc/OpenCL/: grid_dataset.cl  grid_dataset.clh  grid_dataset_assigngradient.cl  grid_dataset_cl.cpp  grid_dataset_cl.h  grid_dataset_markandcollect.cl  grid_dataset_ownerextrema.cl
dmsc_pymod/: CMakeLists.txt  grid_python_interface.cpp
viewer/: grid_viewer.cpp  grid_viewer.h  grid_viewer_mainwindow.cpp  grid_viewer_mainwindow.h  grid_viewer_mainwindow.ui
viewer/shaders/: cell_shader_geom.glsl
